fix some style on mobile

--- a/src/components/MsgFeed/index.module.scss
+++ b/src/components/MsgFeed/index.module.scss
@@ -64,10 +64,10 @@
 
 .fixed {
   position: fixed;
-  top: 50px;
-  left: 45%;
+  top: 80px;
+  left: calc(50% - 70px); 
   width: auto;
-  z-index: 42;
+  z-index: 999;
   opacity: 0.9;
   box-shadow: 0 0 15px var(--primary-02);
   color: var(--neutral-02);
