--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -227,7 +227,7 @@
 .mobileFilter {
   position: -webkit-sticky;
   position: sticky;
-  top: 0; 
+  top: 64px; 
   z-index: 100;
   background: var(--neutral-01);
 
